works but deploys kitchen sink