@@ -20,8 +20,7 @@
 		<main.class>stamfordcoop/fertilizer.MainApp</main.class>
 		<app.main.class>fertilizer.MainApp</app.main.class>
 		<app.identifier>fertilizerapp</app.identifier>
-		<app.description>App to optimize component selection for customizing
-			field fertilizer mixes.</app.description>
+		<app.description>App to optimize component selection for customizing field fertilizer mixes.</app.description>
 		<package.type />
 		<module.name>stamfordcoop</module.name>
 		<vendor>Stamford Farmers Cooperative</vendor>
@@ -123,12 +122,6 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<argLine>
-						--add-exports
-						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-						--add-opens
-						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-					</argLine>
 				</configuration>
 			</plugin>
 
@@ -188,6 +181,26 @@
 							</resources>
 						</configuration>
 					</execution>
+					<execution>
+						<id>copy-resources1</id>
+						<!-- here the phase you need -->
+						<phase>compile</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/defaults</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}</directory>
+									<filtering>true</filtering>
+									<includes>
+										<include>default*.csv</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 
@@ -201,10 +214,7 @@
 					<includes>
 						<include>*Test*.java</include>
 					</includes>
-					<argLine>@{argLine} --add-exports
-						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-						--add-opens
-						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+					<argLine>@{argLine} --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 
@@ -233,7 +243,9 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.4.1</version>
 				<configuration>
-					<outputDirectory>target/jmods</outputDirectory>
+					<outputDirectory>target/jars</outputDirectory>
+					<excludes>**/maven/*</excludes>
+					<excludes>**/native-image/*</excludes>
 				</configuration>
 			</plugin>
 
@@ -256,42 +268,7 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<!--has problem with automatic modules -->
-				<!-- run with command clean package jpackage:jpackage@win-->
-				<groupId>org.panteleyev</groupId>
-				<artifactId>jpackage-maven-plugin</artifactId>
-				<version>1.6.4</version>
-
-				<configuration>
-					<name>Fertilizer App</name>
-					<appVersion>${version}</appVersion>
-					<vendor>${vendor}</vendor>
-					<module>${module.name}/fertilizer.MainApp</module>
-					<modulePaths>
-						<modulePath>target/classes</modulePath>
-						<modulePath>target/jmods</modulePath>
-					</modulePaths>
-
-					<destination>target/dist</destination>
-					<javaOptions>
-						<option>--enable-preview</option>
-						<option>-Dfile.encoding=UTF-8</option>
-					</javaOptions>
-				</configuration>
-
-				<executions>
-
-					<execution>
-						<id>win</id>
-						<configuration>
-							<icon>icons/icon.ico</icon>
-							<winMenu>true</winMenu>
-						</configuration>
-					</execution>
-
-				</executions>
-			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -302,12 +279,13 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+						<outputFile>target/uber/${app.identifier}-${project.version}.jar</outputFile>
 						<minimizeJar>true</minimizeJar>
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>${app.main.class}</Main-Class>
+										<Main-Class>fertilizer.Launcher</Main-Class>
 										<X-Compile-Source-JDK>
 											${maven.compile.source}</X-Compile-Source-JDK>
 										<X-Compile-Target-JDK>
@@ -315,6 +293,40 @@
 									</manifestEntries>
 								</transformer>
 							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<plugin>
+				<!--has problem with automatic modules -->
+				<!-- run with command clean package jpackage:jpackage@win-->
+				<groupId>org.panteleyev</groupId>
+				<artifactId>jpackage-maven-plugin</artifactId>
+				<version>1.6.4</version>
+
+				<configuration>
+					<name>Fertilizer App M</name>
+					<appVersion>${version}</appVersion>
+					<vendor>${vendor}</vendor>
+					<input>.</input>
+					<mainClass>fertilizer.Launcher</mainClass>
+					<mainJar>target/uber/${app.identifier}-${project.version}.jar</mainJar>
+					<destination>target/dist</destination>
+					<appVersion>${version}</appVersion>
+					
+					<resourceDir>target\defaults</resourceDir>				
+					<javaOptions>					
+						<option>-Dfile.encoding=UTF-8</option>
+					</javaOptions>
+				</configuration>
+
+				<executions>
+					<execution>
+						<id>win</id>
+						<configuration>
+							<icon>icons/icon.ico</icon>
+							<winMenu>true</winMenu>
 						</configuration>
 					</execution>
 				</executions>
